# RayCastTest

./: .gitignore  CMakeLists.txt  README.md  Rouwe-TriangleEncAndBVHsForRayCasts.docx  TestRaycast.cpp  cmake_vs2017.bat  pch.h
AABBTree/: AABBTreeBuilder.cpp  AABBTreeBuilder.h  AABBTreeToBuffer.h
Application/: Application.cpp  Application.h  EntryPoint.h
Assets/: LICENSE  bun_zipper.model  triangle.model  triangle.ply
Core/: AlignedAllocator.h  ByteBuffer.h  Color.cpp  Color.h  Core.h  HashCombine.h  Memory.cpp  Memory.h  ProgressIndicator.h  Reference.h  StringTools.cpp  StringTools.h  TickCounter.cpp  TickCounter.h  Utils.cpp  Utils.h
Geometry/: AABox.h  IndexedTriangle.h  Indexify.cpp  Indexify.h  MortonCode.h  RayAABox.h  RayAABox8.h  RayTriangle.h  RayTriangle8.h  Triangle.h
ISPC/: Math.h  RayAABox.h  RayTriangle.h  RayVsAABBTree.ispc  RayVsAABBTreeStripped.ispc  RayVsTriangleList.ispc
Input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Math/: Float2.h  Float3.h  Float4.h  HalfFloat.h  Mat44.h  Mat44.inl  Math.h  Swizzle.h  UVec4.cpp  UVec4.h  UVec4.inl  UVec8.h  UVec8.inl  Vec3.h  Vec3.inl  Vec4.h  Vec4.inl  Vec8.h  Vec8.inl
NodeCodec/: NodeCodecAABBTree.h  NodeCodecAABBTreeCompressed.h  NodeCodecAABBTreePNS.h  NodeCodecAABBTreeSplitAxis.h  NodeCodecQuadTree.h  NodeCodecQuadTreeHalfFloat.h  NodeCodecSKDTree.h
PlyConverter/: PlyConverter.cpp
RayCastTest/: RayCastCPUAABBList.h  RayCastCPUAABBTree1.h  RayCastCPUAABBTree2.h  RayCastCPUAABBTree3.h  RayCastCPUAABBTree4.h  RayCastCPUAABBTree5.h  RayCastCPUAABBTreeCompressed.h  RayCastCPUAABBTreeISPC.cpp  RayCastCPUAABBTreeISPC.h  RayCastCPUAABBTreePNS.h  RayCastCPUAABBTreeSplitAxis.h  RayCastCPUAABBTreeStripISPC.cpp  RayCastCPUAABBTreeStripISPC.h  RayCastCPUBruteForce.h  RayCastCPUQuadTree.h  RayCastCPUQuadTreeHalfFloat.h  RayCastCPUQuadTreeHalfFloat2.h  RayCastCPUSKDTree.h  RayCastGPUAABBList.cpp  RayCastGPUAABBList.h  RayCastGPUBruteForce.cpp  RayCastGPUBruteForce.h  RayCastGPUBruteForceBitPack.cpp  RayCastGPUBruteForceBitPack.h  RayCastGPUTree.h  RayCastTest.h
Renderer/: ConstantBuffer.cpp  ConstantBuffer.h  FatalErrorIfFailed.cpp  FatalErrorIfFailed.h  LineRenderer.cpp  LineRenderer.h  LineRendererImp.cpp  LineRendererImp.h  RenderInstances.cpp  RenderInstances.h  RenderPrimitive.cpp  RenderPrimitive.h  Renderer.cpp  Renderer.h  StructuredBuffer.cpp  StructuredBuffer.h  Texture.cpp  Texture.h  TriangleRenderer.cpp  TriangleRenderer.h  TriangleRendererImp.cpp  TriangleRendererImp.h
Shaders/: Constants.h  ParallelMin.h  RayAABox.h  RayCastGPUAABBList.h  RayCastGPUAABBListStage1.hlsl  RayCastGPUAABBListStage2.hlsl  RayCastGPUAABBTree.h  RayCastGPUAABBTree1.hlsl  RayCastGPUAABBTree2.hlsl  RayCastGPUAABBTree3.hlsl  RayCastGPUAABBTree4.hlsl  RayCastGPUAABBTreeStrip.hlsl  RayCastGPUBruteForce.hlsl  RayCastGPUBruteForceBitPack.hlsl  RayCastGPUBruteForceClear.hlsl  RayCastGPUSKDTree.hlsl  RayCastGPUTree.h  RayTriangle.h  StripifyFlags.h  TrianglePixelShader.hlsl
Stripify/: Stripify.cpp  Stripify.h  StripifyFlags.h
TriangleCodec/: TriangleCodecBitPack.h  TriangleCodecBitPackSOA4.h  TriangleCodecFloat3.h  TriangleCodecFloat3ISPC.h  TriangleCodecFloat3Original.h  TriangleCodecFloat3SOA4.h  TriangleCodecFloat3SOA4Packed.h  TriangleCodecFloat3SOA8.h  TriangleCodecIndexed.h  TriangleCodecIndexed8BitPackSOA4.h  TriangleCodecIndexedBitPackSOA4.h  TriangleCodecIndexedSOA4.h  TriangleCodecStrip.h
TriangleGrouper/: TriangleGrouper.h  TriangleGrouperClosestCentroid.cpp  TriangleGrouperClosestCentroid.h  TriangleGrouperMorton.cpp  TriangleGrouperMorton.h
TriangleSplitter/: TriangleSplitter.cpp  TriangleSplitter.h  TriangleSplitterBinning.cpp  TriangleSplitterBinning.h  TriangleSplitterFixedLeafSize.cpp  TriangleSplitterFixedLeafSize.h  TriangleSplitterLongestAxis.cpp  TriangleSplitterLongestAxis.h  TriangleSplitterMean.cpp  TriangleSplitterMean.h  TriangleSplitterMorton.cpp  TriangleSplitterMorton.h
Utils/: CacheTrasher.cpp  CacheTrasher.h  Model.cpp  Model.h  PerfTimer.h  StatsWriter.cpp  StatsWriter.h
